Fixing spacing on startups section on landing page for mobile

--- a/src/assets/css/new_landing.css
+++ b/src/assets/css/new_landing.css
@@ -89,7 +89,7 @@
 }
 
 .sec-startups-donut-title {
-    padding-top: 25px;
+    padding-top: 10px;
 }
 
 .score_text {
